--- a/back/package.json
+++ b/back/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "start": "pm2 start index.js"
   },
   "author": "JINA",
   "license": "MIT",
